# sky

./: README.md
sbpt/: .gitignore  README.md  pyproject.toml
sbpt/configs/data/: mix.yaml  synth.yaml
sbpt/configs/eval/: suite.yaml
sbpt/configs/model/: sbpt_mvp_120m.yaml
sbpt/configs/train/: phase0_lm.yaml  phase1_state.yaml  phase2_belief.yaml  phase3_verify.yaml  phase4_robust.yaml
sbpt/scripts/: 00_smoke.py  01_make_synth.py  02_build_mix.py  03_train_phase.py  04_eval_suite.py  05_ablate.py  06_make_real_jsonl.py  07_build_mixture.py  08_make_belief_dataset.py  09_make_verify_dataset.py  10_make_robust_dataset.py  11_make_eval_ood_digits.py  12_make_eval_format_hard.py  13_make_eval_robust_pairs.py  14_make_train_add_carry.py  15_make_train_add_carry_stepwise.py  16_make_eval_ood_digits_stepwise.py  17_make_verify_stepwise.py  18_make_format_hard_stepwise.py  19_make_robust_pairs_stepwise.py  20_make_train_add_carry_bridge.py
sbpt/src/sbpt/: __init__.py
sbpt/src/sbpt/data/: augment.py  enumerators.py  loaders.py  packing.py  schemas.py  synth_traces.py
sbpt/src/sbpt/eval/: metrics.py  probes.py  report.py  suite.py
sbpt/src/sbpt/losses/: belief_collapse.py  calibration.py  ccva_router.py  lm.py  state_transition.py  verification.py
sbpt/src/sbpt/model/: exits.py  heads.py  router.py  sbpt.py
sbpt/src/sbpt/train/: ckpt.py  logging.py  loop.py  optim.py  (+1 more)
sbpt/tests/: test_bridge.py  test_enumerators.py  test_eval_metrics.py  test_losses.py  test_mixture.py  test_router.py  test_stepwise_eval_state.py  test_stepwise_generators.py  test_synth.py
(+5 files in other folders)
